@@ -1,44 +1,35 @@
 package pairmatching.domain;
 
-import com.sun.org.apache.bcel.internal.generic.RETURN;
-import java.util.Arrays;
 import java.util.List;
 
 public enum Level {
-    LEVEL1("레벨1", Arrays.asList("자동차경주", "로또", "숫자야구게임")),
-    LEVEL2("레벨2", Arrays.asList("장바구니","결제","지하철노선도")),
-    LEVEL3("레벨3",Arrays.asList("")),
-    LEVEL4("레벨4",Arrays.asList("성능개선","배포")),
-    LEVEL5("레벨5",Arrays.asList(""));
+    LEVEL1("레벨1",List.of("자동차경주","로또","숫자야구게임")),
+    LEVEL2("레벨2",List.of("장바구니","결제","지하철노선도")),
+    LEVEL3("레벨3",List.of()),
+    LEVEL4("레벨4",List.of("성능개선","배포")),
+    LEVEL5("레벨5",List.of());
 
     private String name;
-    private List<String> misssion;
-    Level(String name,List<String> misssion) {
-        this.name = name;
-        this.misssion = misssion;
+    private List<String> missions;
 
+    Level(String name, List<String> missions) {
+        this.name = name;
+        this.missions = missions;
     }
 
-    public static Level getLevel(String name) {
-        for (Level level : Level.values()) {
-            if (level.name.equals(name)) {
+    public static Level of(String name){
+        for (Level level:Level.values()){
+            if (level.name.equals(name)){
                 return level;
             }
         }
-        throw new IllegalArgumentException("잘못된 level");
-    }
-    public List<String> getMission() {
-        return misssion;
+        throw new IllegalArgumentException("[ERROR] 해당 레벨이 존재하지 않습니다.");
     }
 
-    public boolean isMissionInList(String mission){
-        for(Level level : Level.values()){
-            if(level.misssion.contains(mission)){
-                return true;
-            }
+    public void validateExistMission(String name){
+        if (!missions.contains(name)){
+            throw new IllegalArgumentException("[ERROR] 해당 미션이 존재하지 않습니다.");
         }
-        return false;
     }
 
-    // 추가 기능 구현
 }
